# libqrencode

./: .gitignore  CMakeLists.txt  config.h.in  qrcodelib.def  qrenc.c  qrencode.h
cmake/: FindPNG.cmake
